--- a/index.html
+++ b/index.html
@@ -10,13 +10,49 @@
       rel="stylesheet"
       href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     />
-    <!-- css style sheet link  -->
-    <link rel="stylesheet" href="./style/ficter.css" />
+    <!-- css style fixter sheet link  -->
+    <link rel="stylesheet" href="./style/fixter.css" />
+    <!-- css style footer sheet link  -->
+    <link rel="stylesheet" href="./style/footer.css" />
   </head>
   <body>
     <div class="fixter">
+      <div class="height" style="height: 40vh; border: 1px solid red"></div>
       <!-- footer section  -->
-      <section class="TsFooter"></section>
+      <section class="TsFooter">
+        <div class="container">
+          <div class="col-3">
+            <h3 class="TsHeading-05">Meet Fixter</h3>
+            <ul class="p-0 nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link p-0" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-0" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-0" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-0" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-0" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-0" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-0" href="#">About Us</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-3"></div>
+          <div class="col-3"></div>
+          <div class="col-3"></div>
+          <div class="col-12"></div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
