--- a/index.html
+++ b/index.html
@@ -14,45 +14,203 @@
     <link rel="stylesheet" href="./style/fixter.css" />
     <!-- css style footer sheet link  -->
     <link rel="stylesheet" href="./style/footer.css" />
+    <!-- font awesome cdn link -->
+    <script
+      src="https://kit.fontawesome.com/dc80c8265b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="fixter">
-      <div class="height" style="height: 40vh; border: 1px solid red"></div>
+      <div
+        class="height"
+        style="height: 40vh; border: 1px solid red; margin-bottom: 100px"
+      ></div>
       <!-- footer section  -->
-      <section class="TsFooter">
-        <div class="container">
-          <div class="col-3">
-            <h3 class="TsHeading-05">Meet Fixter</h3>
-            <ul class="p-0 nav flex-column">
-              <li class="nav-item">
-                <a class="nav-link p-0" href="#">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link p-0" href="#">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link p-0" href="#">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link p-0" href="#">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link p-0" href="#">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link p-0" href="#">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link p-0" href="#">About Us</a>
-              </li>
-            </ul>
+      <!-- <section class="TsFooter">
+        <div class="m-auto TsFooter-container">
+          <div class="TsFooter-nav d-flex">
+            <div class="col-3">
+              <div class="row pb-4">
+                <div class="col-12">
+                  <h3 class="TsHeading-05">Meet Fixter</h3>
+                  <ul class="p-0 nav flex-column">
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">Services and prices</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">How it works</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">Cars</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">FAQs</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-12 pt-4">
+                  <h3 class="TsHeading-05">Join Us</h3>
+                  <ul class="p-0 nav flex-column">
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">Careers</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">Life at Fixter</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">Driver sign-up</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">Garage sign-up</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">Partnerships</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <h3 class="TsHeading-05">Popular Services</h3>
+              <ul class="p-0 nav flex-column">
+                <li class="nav-item">
+                  <a class="nav-link p-0" href="#">MOT</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-0" href="#">Car service</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-0" href="#"
+                    >Front brake pads replacement</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-0" href="#"
+                    >Rear brake pads replacement</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-0" href="#"
+                    >Front brake discs & pads replacement</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-0" href="#">Timing belt replacement</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-0" href="#">Diagnostic inspection</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-0" href="#">Clutch kit replacement</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-0" href="#"
+                    >Car battery replacement & fitting</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-0" href="#">Air conditioning regas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link p-0" href="#">Water pump replacement</a>
+                </li>
+                <li class="nav-item">
+                  <a class="link p-0" href="#">View all services</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-3">
+              <div class="row">
+                <div class="col-12">
+                  <h3 class="TsHeading-05">Terms</h3>
+                  <ul class="p-0 nav flex-column">
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">Terms and Conditions</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#"
+                        >Cookie and privacy policy</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-12 pt-4">
+                  <h3 class="TsHeading-05">Garages</h3>
+                  <ul class="p-0 nav flex-column">
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">Garages Login</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-12 pt-4">
+                  <h3 class="TsHeading-05">Payment Methods</h3>
+                  <ul class="p-0 nav">
+                    <span
+                      ><img src="./icon/icon_mastercard_rjsrfx.svg" alt=""
+                    /></span>
+                    <span
+                      ><img src="./icon/icon_visa_hrskov.svg" alt=""
+                    /></span>
+                  </ul>
+                </div>
+                <div class="col-12 pt-4">
+                  <h3 class="TsHeading-05">Call Us</h3>
+                  <ul class="p-0 nav flex-column">
+                    <li class="nav-item">
+                      <a class="nav-link p-0" href="#">0330 808 9527</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-3">
+              <span
+                ><img src="./icon/icon_mastercard_rjsrfx.svg" alt=""
+              /></span>
+              <span> In partnership with AXA™ Insurance </span>
+            </div>
           </div>
-          <div class="col-3"></div>
-          <div class="col-3"></div>
-          <div class="col-3"></div>
-          <div class="col-12"></div>
+          <div class="row align-items-center">
+            <div class="col-12 col-md-6 pb-4 pb-md-0">
+              <p class="TsDesc-04 m-0 text-center text-md-start">
+                © 2022 Fixter Limited • All rights reserved • Company No.
+                10426619
+              </p>
+            </div>
+
+            <div
+              class="col-12 col-md-6 text-center p-2 text-md-end TsFooter-icon"
+            >
+              <span class="me-3">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+              </span>
+              <span class="me-3">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+              </span>
+              <span class="me-3">
+                <a href="#"><i class="fab fa-instagram"></i></a>
+              </span>
+              <span>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              </span>
+            </div>
+          </div>
         </div>
-      </section>
+      </section> -->
+      <div
+        class="height"
+        style="height: 40vh; border: 1px solid red; margin-bottom: 100px"
+      ></div>
     </div>
   </body>
 </html>
