--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- css style modal section 
      -->
     <link rel="stylesheet" href="./style/modal.css" />
+    <!-- css style services section 
+     -->
+    <link rel="stylesheet" href="./style/services.css" />
     <!-- font awesome cdn link -->
     <script
       src="https://kit.fontawesome.com/dc80c8265b.js"
@@ -31,7 +34,101 @@
       ></div>
 
       <!-- services section  -->
-      <section class="TsServices"></section>
+      <section class="TsServices m-auto text-center">
+        <div class="TsServices-header m-auto">
+          <h2 class="TsHeading-04 pb-4">
+            Tell us where you are and which services you need; <br />
+            we'll find you a top-rated garage!
+          </h2>
+          <p class="TsDesc-04">
+            <b
+              >We've partnered with the top rated garages in the UK to offer you
+              the best prices and services for your car.</b
+            >
+          </p>
+          <p class="TsDesc-03">
+            Our in-house mechanics personally select each garage we work with,
+            directly negotiate prices with them and always review their
+            top-notch services on our clients cars.
+          </p>
+        </div>
+        <div class="TsServices-cont m-auto pt-4">
+          <div class="TsServices-location text-start">
+            <p><b>Popular locations:</b></p>
+            <div class="TsServices-link">
+              <ul class="nav p-0 flex-column">
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-decoration-underline" href=""
+                    >Garages in London</a
+                  >
+                </li>
+              </ul>
+              <ul class="nav p-0 flex-column">
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-decoration-underline" href=""
+                    >Garages in London</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="TsServices-services text-start">
+            <p><b>Popular services:</b></p>
+            <div class="TsServices-link">
+              <ul class="nav p-0 flex-column">
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-decoration-underline" href=""
+                    >Garages in London</a
+                  >
+                </li>
+              </ul>
+              <ul class="nav p-0 flex-column">
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="">Garages in London</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-decoration-underline" href=""
+                    >Garages in London</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- section ts modal -->
       <section class="TsModal m-auto">
@@ -46,7 +143,7 @@
           <div class="col-12 pt-5">
             <h3 class="TsHeading-04">We cover all makes and models</h3>
           </div>
-          <div class="TsModal-cards pt-5">
+          <div class="TsModal-cards w-100 pt-5">
             <div class="card"><p>Alfa Romeo</p></div>
             <div class="card"><p>Audi</p></div>
             <div class="card"><p>Austin</p></div>
