--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             top-notch services on our clients cars.
           </p>
         </div>
+
         <div class="TsServices-cont m-auto pt-4">
           <div class="TsServices-location text-start">
             <p><b>Popular locations:</b></p>
@@ -61,67 +62,70 @@
                   <a class="nav-link" href="">Garages in London</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Garages in London</a>
+                  <a class="nav-link" href="">Garages in Leeds</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Garages in London</a>
+                  <a class="nav-link" href="">Garages in Liverpool</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-decoration-underline" href=""
-                    >Garages in London</a
-                  >
+                  <a class="nav-link" href="">Garages in Manchester</a>
                 </li>
               </ul>
               <ul class="nav p-0 flex-column">
                 <li class="nav-item">
-                  <a class="nav-link" href="">Garages in London</a>
+                  <a class="nav-link" href="">Garages in Birmingham</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Garages in London</a>
+                  <a class="nav-link" href="">Garages in Southampton</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Garages in London</a>
+                  <a class="nav-link" href="">Garages in Nottingham</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-decoration-underline" href=""
-                    >Garages in London</a
+                    >View all locations</a
                   >
                 </li>
               </ul>
             </div>
           </div>
+
           <div class="TsServices-services text-start">
             <p><b>Popular services:</b></p>
             <div class="TsServices-link">
               <ul class="nav p-0 flex-column">
                 <li class="nav-item">
-                  <a class="nav-link" href="">Garages in London</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="">Garages in London</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="">Garages in London</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-decoration-underline" href=""
-                    >Garages in London</a
+                  <a class="nav-link text-danger" href=""
+                    ><b> MOT from £39</b></a
                   >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-danger" href=""
+                    ><b> Servicing from £59</b></a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-danger" href="">
+                    <b>Diagnostic from £49</b>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href=""> Brake pad replacement</a>
                 </li>
               </ul>
               <ul class="nav p-0 flex-column">
                 <li class="nav-item">
-                  <a class="nav-link" href="">Garages in London</a>
+                  <a class="nav-link" href=""> Brake disc replacement</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Garages in London</a>
+                  <a class="nav-link" href=""> Clutch kit replacement</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="">Garages in London</a>
+                  <a class="nav-link" href=""> Alternator replacement</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-decoration-underline" href=""
-                    >Garages in London</a
+                  <a class="nav-link text-decoration-underline" href="">
+                    View all services</a
                   >
                 </li>
               </ul>
