--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- css style services section 
      -->
     <link rel="stylesheet" href="./style/services.css" />
+    <!-- css style fq section 
+     -->
+    <link rel="stylesheet" href="./style/fq.css" />
     <!-- font awesome cdn link -->
     <script
       src="https://kit.fontawesome.com/dc80c8265b.js"
@@ -32,6 +35,14 @@
         class="height"
         style="height: 40vh; border: 1px solid red; margin-bottom: 100px"
       ></div>
+      <!-- QUESTION SECTION -->
+      <section class="fq m-auto">
+        <div class="fq-cont m-auto">
+          <div class="fq-heading">
+            <h2 class="TsHeading-02">Have questions? Get answers.</h2>
+          </div>
+        </div>
+      </section>
 
       <!-- services section  -->
       <section class="TsServices m-auto text-center">
