--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         class="height"
         style="height: 40vh; border: 1px solid red; margin-bottom: 100px"
       ></div>
+
+<!-- CONTACT SECTION  -->
+<!-- <section class="contact">
+
+</section> -->
+
+
+
       <!-- QUESTION SECTION -->
       <section class="fq m-auto">
         <div class="fq-cont m-auto">
@@ -276,7 +284,7 @@
               </div>
             </div>
             <h2 class="accordion-last-btn mt-5 rounded-3 text-start align-center d-flex" id="flush-headingSiven"> 
-              <span class="TsHeading-03">Can’t find your answer? Check our FAQ</span> 
+              <span class="TsHeading-03 d-flex">Can’t find your answer? <span><a class="nav-link ps-2"href="#"> Check our FAQ</a></span> </span> 
             </h2> 
           </div>
 
