--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <!-- css style fq section 
      -->
     <link rel="stylesheet" href="./style/fq.css" />
+     <!-- css style contact section 
+     -->
+     <link rel="stylesheet" href="./style/contact.css" />
     <!-- font awesome cdn link -->
     <script
       src="https://kit.fontawesome.com/dc80c8265b.js"
@@ -37,9 +40,45 @@
       ></div>
 
 <!-- CONTACT SECTION  -->
-<!-- <section class="contact">
+<section class="p-1 p-sm-3 p-lg-5">
+<div class="contact m-auto">
+<div class="contact-card ">
+  <h2 class="TsHeading-02 mb-5">Need a hand understanding what your car needs?</h2>
+  <p class="mb-5 TsDesc-02">Our in-house experts are available Monday to Friday, 8:30am to 5:30pm.</p>
 
-</section> -->
+  <div class="contact-card-mini">
+
+<div class="cards">
+  
+  <img class="cards-img" src="./icon/phone.svg" alt="">
+  <div class="cards-desc"><h2 class="TsHeading-03 my-2">Phone</h2>
+  <a class="TsDesc-03 nav-link" href="#">
+   <b>0330 808 9527</b> </a>  </div>
+  
+  <a class="TsDesc-03 btn chat-btn btn-primary" href="#">Chat with us</a>
+</div>
+
+  <div class="cards  ">
+  <img class="cards-img" src="./icon/chat_p6zbvd.svg" alt="">
+  <div class="cards-desc">
+  <h2 class="TsHeading-03 my-2">Live chat</h2>
+  <a class="TsDesc-03 btn btn-primary" href="#">Chat with</a></div>
+</div>
+
+<div class="cards  ">
+  <img class="cards-img" src="./icon/mail_peijl2.svg" alt="">
+  <div class="cards-desc">
+  <h2 class="TsHeading-03 my-2">Email</h2>
+  <a class="TsDesc-03 nav-link" href="#"> <b>support@fixter.co.uk</b> </a></div>
+</div> 
+
+  </div>
+</div>
+<div class="contact-card">
+  <img class="w-100 h-100 contact-card-img" src="./img/06-cs.team._kqqklb.jpg" alt="">
+</div>
+
+</div></section>
 
 
 
