--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   <div class="cards  ">
   <img class="cards-img" src="./icon/chat_p6zbvd.svg" alt="">
   <div class="cards-desc">
-  <h2 class="TsHeading-03 my-2">Live chat</h2>
+  <h2 class="TsHeading-03 my-2">Live chat</h2></div>
   <a class="TsDesc-03 btn btn-primary" href="#">Chat with</a></div>
-</div>
+
 
 <div class="cards  ">
   <img class="cards-img" src="./icon/mail_peijl2.svg" alt="">
