--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         style="height: 40vh; border: 1px solid red; margin-bottom: 100px"
       ></div>
 
+<!-- OUR MISSION SECTION  -->
+<section class="mission"></section>
+
+
+
 <!-- CONTACT SECTION  -->
 <section class="p-1 p-sm-3 p-lg-5">
 <div class="contact m-auto">
