--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
        <!-- css style  mission section 
      -->
      <link rel="stylesheet" href="./style/mission.css" />
+      <!-- css style  garages section 
+     -->
+     <link rel="stylesheet" href="./style/garages.css" />
     <!-- font awesome cdn link -->
     <script
       src="https://kit.fontawesome.com/dc80c8265b.js"
@@ -58,7 +61,23 @@
   </div>
 </section>
 <!-- OUR GARAGES SECTION  -->
-<section></section>
+<section>
+  <section class="garages">
+    <div class="garages-cont m-auto">
+      <div>
+        <img class="garages-img w-100" src="./img/ourmission_xgmpfr.jpg" alt="">
+      </div>
+      <div>
+        <h2 class="TsHeading-02 pb-2 pb-sm-3">Our mission</h2>
+        <p class="TsDesc-03">Personal experience made it clear to us that car maintenance is at best, a pain, and at worst, fundamentally broken. It’s an industry with trust issues—opaque, complicated and confusing to navigate, and it’s just so hard to be confident that you’re doing the right thing, and paying the right price.</p>
+        <p  class="TsDesc-03 py-2 py-sm-4"><b>Painless car maintenance—simple, transparent, convenient and fairly-priced. We’re helping people feel confident looking after their car, whilst spending the minimum amount of energy in the process.</b></p>
+        <p  class="TsDesc-03">This is our mission, and it drives everything we do.</p>
+      </div>
+    
+  
+    </div>
+  </section>
+</section>
 
 
 <!-- CONTACT SECTION  -->
