--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
 <section>
   <section class="garages">
     <div class="garages-cont m-auto">
-      <div class="row justify-content-lg-between justify-content-center">
+      <div class="row justify-content-lg-start justify-content-center">
       <div class="garages-img col-11 col-lg-6 col-md-9">
-        <img class="garages-img w-100" src="./img/ourmission_xgmpfr.jpg" alt="">
+        <img class="garages-img w-100" src="./img/02-driver_wjwzja.jpg" alt="">
       </div>
-      <div class=" col-11 pt-4 pt-lg-0 col-lg-5 col-md-9">
-        <h2 class="TsHeading-02 pb-2 pb-sm-3">Our mission</h2>
-        <p class="TsDesc-03">Personal experience made it clear to us that car maintenance is at best, a pain, and at worst, fundamentally broken. It’s an industry with trust issues—opaque, complicated and confusing to navigate, and it’s just so hard to be confident that you’re doing the right thing, and paying the right price.</p>
-        <p  class="TsDesc-03 py-2 py-sm-4"><b>Painless car maintenance—simple, transparent, convenient and fairly-priced. We’re helping people feel confident looking after their car, whilst spending the minimum amount of energy in the process.</b></p>
-        <p  class="TsDesc-03">This is our mission, and it drives everything we do.</p>
+      <div class=" col-11 pt-4 pt-lg-0 ps-2 ps-lg-5 m-auto col-lg-6 col-xl-4 col-md-9">
+        <h2 class="TsHeading-02 pb-2 pb-sm-3">How we choose our garages</h2>
+        <p class="TsDesc-03">We’ve done the hard work of vetting garages, so you don’t have to!</p>
+        <p  class="TsDesc-03 py-2 py-sm-4">Only 1 in 20 garages pass our selection criteria, and we negotiate exclusive rates and last-minute availability with those that do.</p>
+        <a  class="TsDesc-03" href="#">Which garage will my car go to?</a>
       </div>
     </div>
   
