--- a/index.html
+++ b/index.html
@@ -48,15 +48,18 @@
 <!-- OUR MISSION SECTION  -->
 <section class="mission">
   <div class="mission-cont m-auto">
-    <div>
+    <div class="row justify-content-lg-between justify-content-center">
+    
+    <div class="mission-content col-11 pt-4 pt-lg-0 col-lg-5 col-md-9">
       <h2 class="TsHeading-02 pb-2 pb-sm-3">Our mission</h2>
       <p class="TsDesc-03">Personal experience made it clear to us that car maintenance is at best, a pain, and at worst, fundamentally broken. It’s an industry with trust issues—opaque, complicated and confusing to navigate, and it’s just so hard to be confident that you’re doing the right thing, and paying the right price.</p>
-      <p  class="TsDesc-03 py-2 py-sm-4"><b>Painless car maintenance—simple, transparent, convenient and fairly-priced. We’re helping people feel confident looking after their car, whilst spending the minimum amount of energy in the process.</b></p>
-      <p  class="TsDesc-03">This is our mission, and it drives everything we do.</p>
+      <p  class="TsDesc-03 py-2 py-sm-4"> <b>Painless car maintenance—simple, transparent, convenient and fairly-priced. We’re helping people feel confident looking after their car, whilst spending the minimum amount of energy in the process.</b>  </p>
+      <p  class="TsDesc-03" >This is our mission, and it drives everything we do.</p>
     </div>
-    <div>
+    <div class="mission-img col-11 col-lg-6 col-md-9">
       <img class="mission-img w-100" src="./img/ourmission_xgmpfr.jpg" alt="">
     </div>
+  </div>
 
   </div>
 </section>
