--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         style="height: 40vh; border: 1px solid red; margin-bottom: 100px"
       ></div>
 <!-- OUR REVIEWS SECTION -->
-<section class="review">
+<section class="review bg-green">
 <div class="review-cont m-auto">
   <div class="review-header text-center">
     <h2 class="TsHeading-02 mb-2">Our reviews</h2>
@@ -66,30 +66,34 @@
      </a>
   </div>
 
-  <div class="review-details ">
+ 
+</div>
 
-    <div class="review-details-card d-flex">
+</section>
+<section class="bg-blue">
+  <div class="experts m-auto">
+
+    <div class="experts-card d-flex">
       <img src="./icon/bestbage.svg" alt="">
       <div><h2 class="TsHeading-03">The best garages</h2><p class="TsDesc-02">Only 1 in 20 garages pass our rigorous test—so wave goodbye to anxious googling!</p></div>
     </div>
 
-    <div class="review-details-card d-flex">
+    <div class="experts-card d-flex">
       <img src="./icon/quote_ssjwpd.svg" alt="">
       <div><h2 class="TsHeading-03">In-house experts</h2><p class="TsDesc-02">Our team of qualified mechanics can help you from start to finish, in plain English.</p></div>
     </div>
 
-    <div class="review-details-card d-flex">
+    <div class="experts-card d-flex">
       <img src="./icon/clipboard_pphfda.svg" alt="">
       <div><h2 class="TsHeading-03">Manufacturer-certified parts</h2><p class="TsDesc-02">Top-quality parts mean no compromise on quality, whatever your vehicle.</p></div>
     </div>
 
-    <div class="review-details-card d-flex">
+    <div class="experts-card d-flex">
       <img src="./icon/shield_nnukoj.svg" alt="">
       <div><h2 class="TsHeading-03">12 month warranty</h2><p class="TsDesc-02">Our exhaustive 12 month warranty covers both parts and labour, no questions asked.</p></div>
     </div>
 
   </div>
-</div>
 </section>
 <!-- OUR MISSION SECTION  -->
 <section class="mission">
