--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 <body>
   <div class="fixter">
     <div class="height" style="height: 40vh; border: 1px solid red; margin-bottom: 100px"></div>
+    <!-- OUR WORKS SECTION  -->
+    <!-- <section class="work">
+      <div class="work-cont">
+        <h2>How it works</h2>
+        <p>Painless car maintenance</p>
+      </div>
+    </section> -->
     <!-- OUR REVIEWS SECTION -->
     <section class="review bg-green">
       <div class="review-cont m-auto">
