--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   <div class="fixter">
     <div class="height" style="height: 40vh; border: 1px solid red; margin-bottom: 100px"></div>
     <!-- OUR WORKS SECTION  -->
-    <section class="work">
-      <div class="work-cont">
+    <section class="work m-auto">
+      <div class="work-cont m-auto">
         <h2>How it works</h2>
         <p>Painless car maintenance</p>
       </div>
