--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
   <!-- css style  reviews  section 
      -->
   <link rel="stylesheet" href="./style/reviews.css" />
+   <!-- css style work  section 
+     -->
+     <link rel="stylesheet" href="./style/work.css" />
 
   <!-- font awesome cdn link -->
   <script src="https://kit.fontawesome.com/dc80c8265b.js" crossorigin="anonymous"></script>
