--- a/index.html
+++ b/index.html
@@ -55,16 +55,24 @@
         <h2 class="TsHeading-02 mb-3  text-center">How it works</h2>
         <p class="TsDesc-02  text-center">Painless car maintenance</p>
         <div class="row">
-          <div class="col-5 p-4">
+          <div class="col-11 col-md-8 work-video col-lg-5 m-auto  p-4">
             <div class="work-VideoCard">
-              <div>
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16"> <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/> <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/></svg>
+              <div class="play-btn ">
+                <svg xmlns="http://www.w3.org/2000/svg" width="85" height="85" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
+                  <path d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z"/>
+                </svg>
+                <div class="description p-1 p-lg-3 ">
+                  <span class="TsHeading-03 text-white">Watch: how it work</span>
+                  <span class="text-white">55 SECS</span>
+  
+                </div>
               </div>
-              <img class="w-100 rounded-4" src="https://res.cloudinary.com/fxtr/image/upload/f_auto,c_limit,w_1920,q_auto/v1664462627/contentful/how%20fixter%20works/video-thumbnail-phone_byqtyi.jpg" alt="">
+              <img class="w-100" src="https://res.cloudinary.com/fxtr/image/upload/f_auto,c_limit,w_1920,q_auto/v1664462627/contentful/how%20fixter%20works/video-thumbnail-phone_byqtyi.jpg" alt=""> 
+             
             </div>
           </div>
           <div class="col d-none d-lg-block"></div>
-          <div class="col-6">
+          <div class="col-12 work-fq col-lg-6 m-auto ">
             <div class="fq-card accordion accordion-flush">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
