--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>fixter</title>
-  <!-- bootstrap cdn link  -->
-  <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
+   <!-- bootstrap cdn fille  -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+   integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
       <!-- Link Swiper's CSS -->
       <link
       rel="stylesheet"
@@ -41,20 +42,21 @@
    <!-- css style work  section 
      -->
      <link rel="stylesheet" href="./style/work.css" />
+     <!-- css style nav  section 
+     -->
+     <link rel="stylesheet" href="./style/customers.css" />
      <!-- css style customers  section 
      -->
      <link rel="stylesheet" href="./style/nav.css" />
-   <!-- css style nav  section 
-     -->
-     <link rel="stylesheet" href="./style/customers.css" />
   <!-- font awesome cdn link -->
   <script src="https://kit.fontawesome.com/dc80c8265b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="fixter">
+    <!-- HEADER SECTION  -->
     <header class="bg-white w-100 position-fixed navigation"> 
-      <nav class="navbar w-100 navbar-expand-lg m-auto bg-white">
+      <nav class="navbar navbar-expand-lg m-auto bg-white">
 
           <div class="container-fluid">
               <div class="phone-icon"><img src="./icon/icon_phone_f5mhih.svg" alt=""> <b>Call us</b></div>
@@ -105,15 +107,14 @@
                   </ul>
                   <form class="RightBtn" role="search">
                       <button class="btn btn-login border-0 me-3" type="submit"><b>Login</b></button>
-                      <button class="btn btn-primary"> <b>Get instant quote</b> </button>
+                      <button class="btn btn-primary text-white"> <b>Get instant quote</b> </button>
                   </form>
               </div>
           </div>
 
       </nav>
 
-  </header>
-    <div class="height" style="height: 40vh; border: 1px solid red; margin-bottom: 100px"></div>
+  </header> 
 
     <!-- OUR WORKS SECTION  -->
     <section class="work m-auto">
@@ -1246,7 +1247,11 @@
 
   <!-- javascript files link -->
   <!-- bootstrap files  -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- bootstrap js cdn link -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+   
    <!-- Swiper JS -->
    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
@@ -1285,6 +1290,7 @@
   }
      });
    </script>
+ 
   <!-- fq section  -->
   <!-- <script src="./js/slider.js"></script> -->
 </body>
