--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
       </nav>
 
   </header> 
+  <!-- LIMITED OFFER SECTION BAR  -->
+  <div class="row offer">
+    <div class="col-5"></div>
+    <div class="col-7"></div>
+
+  </div>
+
 
     <!-- OUR WORKS SECTION  -->
     <section class="work m-auto">
