--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
    <!-- css style work  section 
      -->
      <link rel="stylesheet" href="./style/work.css" />
-     <!-- css style nav  section 
-     -->
-     <link rel="stylesheet" href="./style/customers.css" />
      <!-- css style customers  section 
      -->
+     <link rel="stylesheet" href="./style/customers.css" />
+     <!-- css style  nav section 
+     -->
      <link rel="stylesheet" href="./style/nav.css" />
+      <!-- css style  hero section 
+     -->
+     <link rel="stylesheet" href="./style/hero.css" />
   <!-- font awesome cdn link -->
   <script src="https://kit.fontawesome.com/dc80c8265b.js" crossorigin="anonymous"></script>
 </head>
@@ -114,11 +117,19 @@
 
       </nav>
 
-  </header> 
+  </header>  
+  <!-- <div class="con" style="height:30vh"></div> -->
   <!-- LIMITED OFFER SECTION BAR  -->
   <div class="row offer">
-    <div class="col-5"></div>
-    <div class="col-7"></div>
+    <div class="col-sm-2 col-3 d-flex col-md-5 offer-left ">
+<div class="d-flex h-100 align-items-center">
+  <img class="me-4 label" src="./icon/icon_discount_yellow_szxx1n.svg" alt="">
+  <h3 class="TsHeading-01 d-none d-md-block m-0">Limited Offer!</h3>
+</div>
+</div> 
+    <div class="col-md-7 col-sm-10 col-9 offer-right d-md-flex align-items-center">
+      <h3 class="TsDesc-01 d-md-none m-0">Limited Offer!</h3>
+      <div class="m-0 text-black description">Book today for <b>Free Collection & Delivery</b> </div></div>
 
   </div>
 
