--- a/index.html
+++ b/index.html
@@ -132,7 +132,104 @@
       <div class="m-0 text-black description">Book today for <b>Free Collection & Delivery</b> </div></div>
 
   </div>
+<!-- hero section -->
+   <section class="hero">
+  <div class="hero-mbimg"> 
+  </div>
+  <div class="hero-cont m-auto">
+      <div class="FillCard col-xxl-4 col-xl-5 col-lg-6 col-md-6 col-12">
+          <h3>The easiest way to take care of your car</h3>
+          <p>Hassle-free MOT, Service and Car Repair</p>
+          <div class="input-div">
+              <span class="icon d-flex align-items-center h-100"><svg xmlns="http://www.w3.org/2000/svg"
+                      width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
+                      <path
+                          d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A31.493 31.493 0 0 1 8 14.58a31.481 31.481 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94zM8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10z" />
+                      <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+                  </svg></span>
+              <input class="w-100" type="text" placeholder="Your Postcode">
+          </div>
+          <div class="input-div">
+              <span class="icon d-flex align-items-center h-100"><svg xmlns="http://www.w3.org/2000/svg"
+                      width="16" height="16" fill="currentColor" class="bi bi-ev-front" viewBox="0 0 16 16">
+                      <path
+                          d="M9.354 4.243a.188.188 0 0 0-.085-.218.186.186 0 0 0-.23.034L6.051 7.246a.188.188 0 0 0 .136.316h1.241l-.673 2.195a.188.188 0 0 0 .085.218c.075.043.17.03.23-.034l2.88-3.187a.188.188 0 0 0-.137-.316H8.572l.782-2.195Z" />
+                      <path
+                          d="M4.819 2A2.5 2.5 0 0 0 2.52 3.515l-.792 1.848a.807.807 0 0 1-.38.404c-.5.25-.855.715-.965 1.262L.05 8.708a2.5 2.5 0 0 0-.049.49v.413c0 .814.39 1.543 1 1.997V13.5a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1.338c1.292.048 2.745.088 4 .088s2.708-.04 4-.088V13.5a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1.892c.61-.454 1-1.183 1-1.997v-.413c0-.165-.016-.329-.049-.49l-.335-1.68a1.807 1.807 0 0 0-.964-1.261.807.807 0 0 1-.381-.404l-.792-1.848A2.5 2.5 0 0 0 11.181 2H4.82ZM3.44 3.91A1.5 1.5 0 0 1 4.82 3h6.362a1.5 1.5 0 0 1 1.379.91l.792 1.847a1.8 1.8 0 0 0 .853.904c.222.112.381.32.43.564l.336 1.679c.02.097.029.195.029.294v.413a1.48 1.48 0 0 1-1.408 1.484c-1.555.07-3.786.155-5.592.155-1.806 0-4.037-.084-5.592-.155A1.479 1.479 0 0 1 1 9.611v-.413c0-.099.01-.197.03-.294l.335-1.68a.807.807 0 0 1 .43-.563c.383-.19.685-.511.853-.904l.792-1.848Z" />
+                  </svg></span>
 
+              <input class="w-100" type="text" placeholder="Your registration number">
+          </div>
+          <div class="input-div">
+              <input class="w-100 text-white" type="submit" placeholder="Get an Instant Quote"
+                  value="Get an Instant Quote">
+          </div>
+
+
+          <a href=""></a>
+          <div class="row ">
+              <div class="col-6">
+                  <a class="TsDesc-03  text-decoration-none me-2" href="#">
+                      <span>Great</span>
+                  </a>
+                  <a class="text-decoration-none me-3" href="">
+                      <span class="">
+                          <span class="LightGreenStar"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                  height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                  <path
+                                      d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                              </svg></span>
+                          <span class="LightGreenStar"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                  height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                  <path
+                                      d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                              </svg></span>
+                          <span class="LightGreenStar"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                  height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                  <path
+                                      d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                              </svg></span>
+                          <span class="LightGreenStar"><svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                  height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                  <path
+                                      d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                              </svg></span>
+                          <span class="WhiteStar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                  fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                  <path
+                                      d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                              </svg></span>
+                      </span></a>
+                  <a class="TsDesc-03 ms-1  text-decoration-none" href="">
+                      <span>3,841 reviews on </span>
+                      <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                              class="bi bi-star-fill text-success" viewBox="0 0 16 16">
+                              <path
+                                  d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                          </svg> Trustpilot</span>
+                  </a>
+              </div>
+
+              <div class="col-6">
+                  <p>Insured by</p>
+                  <img src="https://res.cloudinary.com/fxtr/image/upload/f_auto,c_limit,w_96,q_auto/v1662467020/contentful/allianz-logo_wv1gt3.png"
+                      alt="">
+                     
+              </div>
+             
+          </div>
+          <div class="d-flex mt-3 justify-content-between">
+              <img src="..." alt="...">
+              <div>
+                  <p class="p-0 m-0"> Not sure what’s wrong with your car? </p> 
+              <div><a href="#">Speak to our in-house experts</a></div>
+              </div>
+          </div>
+      </div>
+  </div>
+  </div>
+
+     </section>
 
     <!-- OUR WORKS SECTION  -->
     <section class="work m-auto">
